fixed z-index on header and alignment in event with type music

--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -6,18 +6,15 @@
   padding: 1vw 6vw;
   @include respond-to(small-portrait) {
     font-size: 13px;
-    height: 12vw;
     padding: 2vw;
   }
 
   @include respond-to(small-landscape) {
     font-size: 1.5vw;
-    height: 8vw;
   }
 
   @include respond-to(big-portrait) {
     font-size: 2.3vw;
-    height: 10vw;
   }
 
   @include respond-to(big-landscape) {
