--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -34,15 +34,14 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
   }
 
   @include respond-to(small-landscape) {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1;
   }
+    z-index: 4;
 
 }
 
