--- a/src/styles/blocks/main/event-data.scss
+++ b/src/styles/blocks/main/event-data.scss
@@ -57,6 +57,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  @media screen and (min-width: 768px) and (max-width: 999px){
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
 }
 
 .data__music_image {
@@ -76,6 +81,7 @@
 .data__music_composition {
   margin-bottom: 10px;
   display: flex;
+  margin-right: 25px;
 }
 
 .data__music_composition-range {
